--- a/app.json
+++ b/app.json
@@ -26,11 +26,17 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "static",
+      "output": "server",
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      [
+        "expo-router",
+        {
+          "origin": "https://evanbacon.dev/"
+        }
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
