--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "react-native": "0.73.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "sequelize": "^6.35.2",
+    "sqlite3": "^5.1.7",
+    "pg-hstore": "^2.3.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
